--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 </head>
 <body>
 
+    <!-- This new element creates the futuristic background effect -->
+    <div class="background-spotlight"></div>
+
     <div class="container">
         <!-- Header / Hero Section -->
         <header class="hero">
             <!-- Relative path -->
             <img src="static/images/profile.jpg" alt="Nakul Sharma" class="profile-img">
-            
+
             <h1 class="name">Nakul Sharma</h1>
             <h2 class="tagline">Python Developer | AI Enthusiast | Data Science</h2>
             <div class="social-links">
